apps/devsecops-dashboard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-dashboard
spec:
  selector:
    app.kubernetes.io/name: devsecops-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
