apps/devsecops-dashboard/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: devsecops-dashboard
spec:
  to:
    kind: Service
    name: devsecops-dashboard
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
